# pydoit

./: AUTHORS  Makefile.am  README.md  configure.ac  index.html  params.json
src/: Makefile.am  buttonbuilder.py  db.py  listpicker.py  prefs.py  pydoit.py  pydoit.ui  selectlist.ui  task.py  tasklist.py  tasklistbuilder.py
src/lists/bedtime/: bedtime.txt
src/lists/bedtime/bathroom/: bathroom.ac3  bathroom.txt
src/lists/bedtime/brush teeth/: brush teeth.ac3  brush teeth.txt
src/lists/bedtime/pajamas/: pajamas.ac3  pajamas.txt
src/lists/bedtime/sleep/: sleep.ac3  sleep.txt
src/lists/bedtime/snack/: snack.ac3  snack.txt
src/lists/bedtime/stories/: stories.ac3
src/lists/family/: family.txt
src/lists/family/Darrell Dupas/: Darrell Dupas.ac3  Darrell Dupas.txt
src/lists/family/Janaye Shaw/: Janaye Shaw.txt
src/lists/family/Leela Shaw/: Leela Shaw.ac3  Leela Shaw.txt
src/lists/feelings/: feelings.txt
src/lists/feelings/boss/: boss.ac3  boss.txt
src/lists/feelings/doh/: doh.aac  doh.ac3  doh.txt
src/lists/feelings/freezing/: freezing.ac3  freezing.txt
src/lists/feelings/gross/: gross.ac3  gross.txt
src/lists/feelings/hot/: hot.ac3  hot.txt
src/lists/feelings/party/: party.ac3  party.txt
src/lists/feelings/relaxed/: relaxed.ac3  relaxed.txt
src/lists/feelings/scared/: scared.ac3  scared.txt
src/lists/feelings/whatever/: whatever.ac3
src/lists/feelings/yay/: yay.aac  yay.ac3
src/lists/kraft dinner/: kraft dinner.txt
src/lists/minecraft/: minecraft.txt
src/lists/star wars/: star wars.txt
